--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,20 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+{{#if isUserLoggedIn}}
+  <p> Hello, {{ currentUserInfo.name}}. </p>
+{{/if}}
+
+<nav>
+  <ul>
+  <!-- validamos que el usuario esté logueado para mostrar diferentes opciones en la navbar-->
+    {{#if isUserLoggedIn}}
+     <li> <a href="/launderers"> Find a Launderer </a> </li>
+      <li> <a href="/dashboard"> See Dashboard </a> </li>
+      <li> <a href="/logout"> Log Out </a> </li>
+    {{else}}
+      <li> <a href="/signup"> Sign Up </a> </li>
+      <li> <a href="/login"> Log In </a> </li>
+    {{/if}}
+  </ul>
+</nav>
